<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/amount"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/amount"/>

    <Spinner
        android:id="@+id/currency_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/amount"
        android:layout_alignParentRight="true"
        android:layout_marginRight="32dp"/>

    <Button
        android:id="@+id/convert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/amount"
        android:layout_marginTop="40dp"/>

    <RelativeLayout
        android:id="@+id/dollar_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/convert">

        <TextView
            android:id="@+id/dollar_amt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/even"
            android:textSize="18sp"
            android:layout_marginTop="32dp"/>

        <TextView
            android:id="@+id/dollar_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollar"
            android:layout_toEndOf="@id/dollar_amt"
            android:textSize="18sp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="32dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/pound_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/dollar_layout">

        <TextView
            android:id="@+id/pound_amt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/even"
            android:textSize="18sp"
            android:layout_marginTop="32dp"/>

        <TextView
            android:id="@+id/pound_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pound"
            android:layout_toEndOf="@id/pound_amt"
            android:textSize="18sp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="32dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/naira_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/pound_layout">

        <TextView
            android:id="@+id/naira_amt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/even"
            android:textSize="18sp"
            android:layout_marginTop="32dp"/>

        <TextView
            android:id="@+id/naira_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/naira"
            android:layout_toEndOf="@id/naira_amt"
            android:textSize="18sp"
            android:layout_marginStart="138dp"
            android:layout_marginTop="32dp"/>

    </RelativeLayout>
</RelativeLayout>